syntax = "proto3";

option java_multiple_files = true;
option java_package = "patient";

service PatientService{
  rpc getPatientDetails(PatientRequest) returns(PatientResponse);
}

message PatientRequest{
  string patientId = 1;
}

message PatientResponse{
  string name = 1;
}